[package]
name = "palindrome"
version = "0.1.1"
description = "Check for palindromes in words and sentences"
documentation = "https://docs.rs/palindrome"
authors = ["TheUnitedStatesOfAmerica <me@luna.fyi>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TheUnitedStatesOfAmerica/palindrome.rs"
repository = "https://github.com/TheUnitedStatesOfAmerica/palindrome.rs.git"

[badges.maintenance]
status = "actively-developed"

[dependencies]
